Remove gobject extensions; Support python-keybinder for multimedia keys
 - For GTK+ < 2.16 there is still egg.trayicon, which is in debian/ubuntu/fedora..
 - python-keybinder is also in most distros & has GTK+ 3 support.. for when the time comes.

--- a/quodlibet/README
+++ b/quodlibet/README
@@ -70,8 +70,8 @@ Many parts of Quod Libet benefit from D-Bus and its Python bindings
 (http://dbus.freedesktop.org/). iPod support depends on libgpod
 and its Python bindings (http://www.gtkpod.org/).
 
-Quod Libet requires the PyGTK development libraries, intltool, and the
-Python distutils suite to build and install. You can do this with
+Quod Libet requires intltool, and the Python distutils suite to build and
+install. You can do this with
  $ ./setup.py build
  $ ./setup.py install
 
