--- a/quodlibet/quodlibet/images/README
+++ b/quodlibet/quodlibet/images/README
@@ -5,5 +5,14 @@ All icons not starting with "quodlibet" or "exfalso" are taken from
 the Gnome Icon Theme (LGPL v.3 or Creative Commons BY-SA 3.0) [1]
 and Gnome Colors (GPLv2 or later) [2].
 
+Gnome Colors:
+    16x16/devices/multimedia-player
+    48x48/devices/multimedia-player
+    16x16/places/user-trash
+
+Gnome Icon Theme
+    24x24/actions/media-eject
+    24x24/status/audio-volume-*
+
 [1] http://ftp.gnome.org/pub/GNOME/sources/gnome-icon-theme/
 [2] http://code.google.com/p/gnome-colors/
