--- a/quodlibet/NEWS
+++ b/quodlibet/NEWS
@@ -1,6 +1,17 @@
 Quod Libet requires Python 2.6, PyGTK 2.16, and Mutagen 1.11,
 but recommends Python 2.6, PyGTK 2.16, and Mutagen 1.20 or later.
 
+2.5.1 (2013-04-23) - Yes: MY COMPUTER IS A PERSON.
+
+ * Fix various widgets not showing with pygtk/pygobject trunk
+ * Fix QL refusing to start in some cases [1131]
+ * Improve web browser discovery and fix on Windows
+ * Fix various problems with playlists + masked files [1095]
+ * Reduce debug output if loading a file fails [1080]
+ * Plugins:
+   * notify: Don't set notifications to transient [1103]
+   * lastfmsync: Fix loading/saving of cache [1093]
+
 2.5 (2012-12-19) - Reading on the floor: literature!
 
  * Greek translation update (Dimitris Papageorgiou) [1064]
