--- a/quodlibet/README
+++ b/quodlibet/README
@@ -1,67 +1,43 @@
 Ex Falso / Quod Libet - A Music Library/Editor/Player
-========================================================================
-Quod Libet is a music management program. It provides several different ways
-to view your audio library, as well as support for Internet radio and
+=====================================================
+
+Quod Libet is a music management program. It provides several different
+ways to view your audio library, as well as support for Internet radio and
 audio feeds. It has extremely flexible metadata tag editing and searching
 capabilities.
 
 Ex Falso is a tag editor with the same tag editing interface as Quod Libet,
 but it does not play files.
 
-Supported file formats include Ogg Vorbis, MP3, FLAC, MOD/XM/IT, Musepack,
-Wavpack, and MPEG-4 AAC.
+Supported file formats include Ogg Vorbis/Opus/Speex/FLAC, MP3, FLAC,
+MOD/XM/IT, Musepack, Wavpack, MPEG-4 AAC, Monkeys Audio, WMA, SPC, MIDI.
+
+
+Contact & Bug Reports
+---------------------
 
 To report bugs, suggest features, ask a question, get the latest version,
 or help us out, visit http://code.google.com/p/quodlibet/.
 
-====[ Using EF/QL
-To run the programs, use
- $ ./quodlibet.py
-or
- $ ./exfalso.py
+IRC: #quodlibet on irc.oftc.net
+Mailing List: http://groups.google.com/group/quod-libet-development
 
-After installing, you can just run `quodlibet' or `exfalso'.
 
-For help, visit http://code.google.com/p/quodlibet/wiki/Guide.
+Installation Requirements
+-------------------------
 
-The manual page contains a brief synopsis of command-line options,
-and search and foramtting pattern syntax.
- $ man -l ./man/quodlibet.1
 
-====[ Requirements
+Runtime Requirements
+--------------------
 
-==[ Source
+* Python >= 2.6
+* PyGTK >= 2.16
+* PyGST >= 0.10.2 or xine-lib 1.x
+* Mutagen >= 1.14
 
-Quod Libet depends on the Python runtime and associated libraries.
 
-    * Python (>= 2.6):		http://www.python.org
-    * PyGTK (>= 2.16):		http://www.pygtk.org
-    * PyGSt (>= 0.10.2):	http://gstreamer.freedesktop.org/
-    * Mutagen (>= 1.10):
-	http://code.google.com/p/quodlibet/wiki/Mutagen
-
-Particular audio formats depend on various GStreamer decoding elements, 
-as well as other Python modules. GStreamer splits their downloads into 
-good, bad, ugly, and ffmpeg packages; you probably want them all in
-order to play as many formats as you can.
-
-Format		Decoder
-------------------------------------------------------------------------
-ASF/WMA		ffmpeg		http://ffmpeg.mplayerhq.hu
-FLAC		flacdec		http://flac.sourceforge.net
-Musepack	musepackdec	http://www.musepack.net/index.php?pg=src
-MOD/XM/IT	modplug		http://modplug-xmms.sourceforge.net/
-MP3		mad		http://www.underbit.com/products/mad/
-MPEG-4 AAC	faad		http://www.audiocoding.com
-SPC700		spcdec		
-TrueAudio	ttadec		http://www.trueaudio.com
-Ogg Speex	speexdec	http://www.speex.org
-Ogg Vorbis	vorbisdec	ttp://www.vorbis.com
-Wave		wavparse
-WavPack		wavpackdec	http://www.wavpack.com
-
-Internet Radio depends on HTTP support in GStreamer; the most common way 
-to get this is to install the GNOME-VFS modules for GStreamer.
+Optional Runtime Requirements
+-----------------------------
 
 Audio Feed support depends on HTTP support and Universal Feed Parser
 (http://www.feedparser.org/).
@@ -70,10 +46,20 @@ Many parts of Quod Libet benefit from D-Bus and its Python bindings
 (http://dbus.freedesktop.org/). iPod support depends on libgpod
 and its Python bindings (http://www.gtkpod.org/).
 
-Quod Libet requires intltool, and the Python distutils suite to build and
-install. You can do this with
- $ ./setup.py build
- $ ./setup.py install
 
-For more information, see 
-http://code.google.com/p/quodlibet/wiki/Requirements
+Installation
+------------
+
+::
+
+    ./setup.py build
+    ./setup.py install
+
+
+Tests
+-----
+
+::
+
+    ./setup.py test
+    ./setup.py test --to-run=TestClassName
