--- a/quodlibet/README
+++ b/quodlibet/README
@@ -23,6 +23,14 @@ IRC: #quodlibet on irc.oftc.net
 Mailing List: http://groups.google.com/group/quod-libet-development
 
 
+Documentation
+-------------
+
+Call 'make' in the 'docs' directory to build sphinx documentation.
+
+Or access it online: https://quodlibet.readthedocs.org/
+
+
 Installation Requirements
 -------------------------
 
@@ -37,17 +45,6 @@ Runtime Requirements
 * PyGTK >= 2.16
 * PyGST >= 0.10.2 or xine-lib 1.x
 * Mutagen >= 1.14
-
-
-Optional Runtime Requirements
------------------------------
-
-Audio Feed support depends on HTTP support and Universal Feed Parser
-(http://www.feedparser.org/).
-
-Many parts of Quod Libet benefit from D-Bus and its Python bindings
-(http://dbus.freedesktop.org/). iPod support depends on libgpod
-and its Python bindings (http://www.gtkpod.org/).
 
 
 Installation
